--- a/LacedExporter/config.json
+++ b/LacedExporter/config.json
@@ -1,5 +1,5 @@
 {
-    "username": "EMAIL",
+    "username": "USERNAME",
     "password": "PASSWORD",
     "webhook": "WEBHOOK NOT USED IN THIS SCRIPT."
 }
